Fix button overflowing

--- a/src/styles.css
+++ b/src/styles.css
@@ -130,6 +130,10 @@ body > main > nav > ul > li > form {
    width: 100%;
 }
 
+body > main > nav > ul > li > button.project {
+   width: 80%;
+}
+
 body > main > nav > ul .project {
    flex: 1;
    text-align: start;
